--- a/css/style.css
+++ b/css/style.css
@@ -726,8 +726,9 @@ body {
 
 .narrative {
   display: inline-block;
-  width: 12.5em;
-  height: 15em;
+  width: 100%;
+  width: -webkit-fill-available;
+  height: 5em;
   background-color: #5AAF7F;
   margin-left: 10px;
   margin-right: 10px;
@@ -737,22 +738,27 @@ body {
   .narrative:hover {
     color: #fff; }
   .narrative img {
-    width: 100%; }
+    width: 100%;
+    display: none; }
   .narrative .narrative-name {
-    font-size: 1.25em;
-    margin-top: -4px; }
+    font-size: 1.25em; }
 
 @media (min-width: 400px) {
   .narratives-container {
-    font-size: 12px; } }
+    font-size: 14.5px; } }
 
 @media (min-width: 750px) {
   .narratives-container {
-    font-size: 13px; } }
+    font-size: 10px; }
+  .narrative {
+    height: 15em;
+    width: 12.5em; }
+    .narrative img {
+      display: block; } }
 
 @media (min-width: 1000px) {
   .narratives-container {
-    font-size: 11px; } }
+    font-size: 14px; } }
 
 @media (min-width: 1200px) {
   .narratives-container {
